--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    hello this is
+    <h1>hello</h1>
+    <p>this is new addition of git  Hup</p>
 </body>
 </html>
